<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create_and_Vote"
    android:background="@drawable/home_page">

    <LinearLayout
        android:id="@+id/bothEnterFace"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <EditText
            android:id="@+id/take_cId"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:hint="Enter contest id"
            android:textColor="#fff"
            android:textColorHint="#fff"/>
        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ADD MEMBER" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="---OR---"
            android:textAlignment="center"
            android:textColor="#fff"/>
        <Button
            android:id="@+id/button3"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:text="CREATE NEW CONTEST" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/Create_contest"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Create Contest"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="25dp"
                />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/common_google_signin_btn_icon_light_focused" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="Contest Id"/>
    <EditText
        android:id="@+id/contest_id"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contest_id"
        android:textSize="20dp"
        />

</LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="Contest Name"/>
                <EditText
                    android:id="@+id/contest_name"
                    android:layout_marginLeft="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contest_name"
                    android:textSize="20dp"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="Contest Type"/>
                <EditText
                    android:id="@+id/contest_type"
                    android:layout_marginLeft="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contest_type"
                    android:textSize="20dp"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/button2"
                android:layout_marginTop="10dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="Submit" />
        </LinearLayout>
    </ScrollView>
    <ScrollView
        android:id="@+id/add_members"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Add Members"
                android:textSize="25dp"
                android:textAlignment="center"/>

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select Image" />

            <EditText
                android:id="@+id/candidate_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="Candidate Id" />

            <EditText
                android:id="@+id/candidate_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="Candidate Name" />

            <EditText
                android:id="@+id/candidate_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:hint="Mobile No."/>

            <EditText
                android:id="@+id/candidate_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="About"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/add_member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ADD" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>